[gd_scene load_steps=3 format=3 uid="uid://b6rdv2mlybcm4"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_u34m1"]
[ext_resource type="Resource" uid="uid://c05ppymvd68fl" path="res://TRESfiles/BrewData.tres" id="2_7jxtb"]

[node name="Window" type="Window"]
title = "Settings"
initial_position = 1
size = Vector2i(620, 200)
wrap_controls = true
transient = true
exclusive = true
popup_window = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u34m1")
data = ExtResource("2_7jxtb")

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Directories" type="VBoxContainer" parent="Control/TabContainer"]
layout_mode = 2

[node name="UserDir" type="HBoxContainer" parent="Control/TabContainer/Directories"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/Directories/UserDir"]
layout_mode = 2
text = "User files Directory:"

[node name="Field" type="LineEdit" parent="Control/TabContainer/Directories/UserDir"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Where user files go"

[node name="Save" type="Button" parent="Control/TabContainer/Directories/UserDir"]
layout_mode = 2
size_flags_horizontal = 8
text = "Save"

[node name="DownloadDir" type="HBoxContainer" parent="Control/TabContainer/Directories"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/Directories/DownloadDir"]
layout_mode = 2
text = "Homebrew Directory:"

[node name="Field" type="LineEdit" parent="Control/TabContainer/Directories/DownloadDir"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Where downloads go"

[node name="Save" type="Button" parent="Control/TabContainer/Directories/DownloadDir"]
layout_mode = 2
size_flags_horizontal = 8
text = "Save"

[node name="OpenCfgDir" type="Button" parent="Control/TabContainer/Directories"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Your settings can be manually edited here"

[node name="App Behavior" type="VBoxContainer" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="AutoLoad" type="HBoxContainer" parent="Control/TabContainer/App Behavior"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/App Behavior/AutoLoad"]
layout_mode = 2
text = "Auto-load HBAS app list"

[node name="Toggle" type="CheckButton" parent="Control/TabContainer/App Behavior/AutoLoad"]
layout_mode = 2
size_flags_vertical = 3

[node name="AutoDLRepo" type="HBoxContainer" parent="Control/TabContainer/App Behavior"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/App Behavior/AutoDLRepo"]
layout_mode = 2
text = "Auto-download HBAS information"

[node name="Toggle" type="CheckButton" parent="Control/TabContainer/App Behavior/AutoDLRepo"]
layout_mode = 2
size_flags_vertical = 3

[node name="LoadBackgroundImage" type="HBoxContainer" parent="Control/TabContainer/App Behavior"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/App Behavior/LoadBackgroundImage"]
layout_mode = 2
text = "Load custom background image"

[node name="Toggle" type="CheckButton" parent="Control/TabContainer/App Behavior/LoadBackgroundImage"]
layout_mode = 2
size_flags_vertical = 3

[node name="LoadBackgroundMusic" type="HBoxContainer" parent="Control/TabContainer/App Behavior"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TabContainer/App Behavior/LoadBackgroundMusic"]
layout_mode = 2
text = "Load custom background music"

[node name="Toggle" type="CheckButton" parent="Control/TabContainer/App Behavior/LoadBackgroundMusic"]
layout_mode = 2
size_flags_vertical = 3

[node name="ManualControls" type="HBoxContainer" parent="Control/TabContainer/App Behavior"]
layout_mode = 2

[node name="RepoDownload" type="Button" parent="Control/TabContainer/App Behavior/ManualControls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Click to download HBAS information"

[node name="ListLoad" type="Button" parent="Control/TabContainer/App Behavior/ManualControls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
text = "Click to (re)load HBAS repository"

[node name="WindowOptions" type="HBoxContainer" parent="Control"]
layout_mode = 2
offset_top = 169.0
offset_right = 620.0
offset_bottom = 200.0
size_flags_vertical = 10
alignment = 1

[node name="CancelChanges" type="Button" parent="Control/WindowOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="SaveChanges" type="Button" parent="Control/WindowOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Changes"

[connection signal="close_requested" from="." to="Control" method="_on_window_close_requested"]
[connection signal="text_submitted" from="Control/TabContainer/Directories/UserDir/Field" to="Control" method="_on_user_directory_text_submitted"]
[connection signal="text_submitted" from="Control/TabContainer/Directories/DownloadDir/Field" to="Control" method="_on_downloaddir_text_submitted"]
[connection signal="pressed" from="Control/TabContainer/Directories/OpenCfgDir" to="Control" method="_on_open_cfg_dir_pressed"]
[connection signal="toggled" from="Control/TabContainer/App Behavior/AutoLoad/Toggle" to="Control" method="_on_auto_load_hbas_toggled"]
[connection signal="toggled" from="Control/TabContainer/App Behavior/AutoDLRepo/Toggle" to="Control" method="_on_autodownload_toggled"]
[connection signal="toggled" from="Control/TabContainer/App Behavior/LoadBackgroundImage/Toggle" to="Control" method="_on_load_image_toggle_toggled"]
[connection signal="toggled" from="Control/TabContainer/App Behavior/LoadBackgroundMusic/Toggle" to="Control" method="_on_loadmusic_toggled"]
[connection signal="pressed" from="Control/TabContainer/App Behavior/ManualControls/RepoDownload" to="Control" method="_on_repo_download_pressed"]
[connection signal="pressed" from="Control/TabContainer/App Behavior/ManualControls/ListLoad" to="Control" method="_on_list_load_pressed"]
[connection signal="pressed" from="Control/WindowOptions/CancelChanges" to="Control" method="_on_cancel_changes_pressed"]
[connection signal="pressed" from="Control/WindowOptions/SaveChanges" to="Control" method="_on_save_changes_pressed"]
